--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # App Onboarding
   showcaseview: ^1.1.8
 
+  # Windows themed widgets
+  fluent_ui: ^4.0.0
+  
   # Parse uuids
   json_schema2: ^2.0.2+11
 
@@ -72,10 +75,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  
-  cross_platform_ui_elements:
-    git:
-      url: https://github.com/khanliKU/cross_platform_ui_elements.git
 
   # pick program files
   file_picker: ^5.2.0+1
@@ -93,17 +92,20 @@ dependency_overrides:
 
   flutter_reactive_ble:
     git:
-      url: https://github.com/khanliKU/flutter_reactive_ble.git
+      url: https://github.com/Analog-Devices-MSDK/flutter_reactive_ble.git
+      ref: dev-ADI
       path: packages/flutter_reactive_ble
 
   reactive_ble_mobile:
     git:
-      url: https://github.com/khanliKU/flutter_reactive_ble.git
+      url: https://github.com/Analog-Devices-MSDK/flutter_reactive_ble.git
+      ref: dev-ADI
       path: packages/reactive_ble_mobile
 
   reactive_ble_platform_interface:
     git:
-      url: https://github.com/khanliKU/flutter_reactive_ble.git
+      url: https://github.com/Analog-Devices-MSDK/flutter_reactive_ble.git
+      ref: dev-ADI
       path: packages/reactive_ble_platform_interface
 
 dev_dependencies:
