--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Set App Version
+        run: |
+          VERSION=$(awk '/version:/ {print $2}' pubspec.yaml | tr -d '\r')
+          VERSION="${VERSION}.${{github.run_number}}"
+          echo $VERSION
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
       - name: Download Android keystore
         id: android_keystore
         uses: timheuer/base64-to-file@v1.0.3
@@ -52,8 +58,14 @@ jobs:
       - name: Start Android Release Build
         run: flutter build apk --release
 
+      - name: Prepare Release
+        run: |
+          # Create release folder and add all related files here
+          mkdir release
+          mv build/app/outputs/apk/release/app-release.apk release/adi_attach_android_v${VERSION}.apk
+        
       - name: Upload Android Release
         uses: actions/upload-artifact@v2
         with:
-          name: android-release
-          path: build/app/outputs/apk/release/app-release.apk
+          name: adi_attach_android_v${{env.VERSION}}
+          path: release/**
