flutter cache set true

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,7 @@ jobs:
         with:
           flutter-version: "3.3.9"
           channel: 'stable'
+          cache: true
 
       - name: Get dependencies
         run: flutter pub get
