--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,9 @@ jobs:
           channel: 'stable'
           cache: true
 
+      - name: Clear Flutter
+        run: flutter clean
+
       - name: Get dependencies
         run: flutter pub get
       
