Generate both .apk and .aab (#9)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,13 +55,17 @@ jobs:
       - name: Generate C to Dart files
         run: dart run ffigen
 
-      - name: Start Android Release Build
+      - name: Start Android Appbundle Release Build
+        run: flutter build appbundle --release
+      
+      - name: Start Android APK Release Build
         run: flutter build apk --release
 
       - name: Prepare Release
         run: |
           # Create release folder and add all related files here
           mkdir release
+          mv build/app/outputs/bundle/release/app-release.aab release/adi_attach_android_v${VERSION}.aab
           mv build/app/outputs/apk/release/app-release.apk release/adi_attach_android_v${VERSION}.apk
         
       - name: Upload Android Release
