--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,37 +6,42 @@ on:
 
 jobs:
   build:
-    name: Create Android Build
+    name: Build for Android
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
         with:
           submodules: true
+
       - name: Set App Version
         run: |
           VERSION=$(awk '/version:/ {print $2}' pubspec.yaml | tr -d '\r')
           VERSION="${VERSION}.${{github.run_number}}"
           echo $VERSION
           echo "VERSION=$VERSION" >> $GITHUB_ENV
+
       - name: Download Android keystore
         id: android_keystore
         uses: timheuer/base64-to-file@v1.0.3
         with:
           fileName: upload-keystore.jks
           encodedString: ${{ secrets.LMAXIM_SIGNING_KEY }}
+
       - name: Create key.properties
         run: |
           echo "storeFile=${{ steps.android_keystore.outputs.filePath }}" > android/key.properties
           echo "storePassword=${{ secrets.LMAXIM_KEY_STORE_PASSWORD }}" >> android/key.properties
           echo "keyPassword=${{ secrets.LMAXIM_KEY_PASSWORD }}" >> android/key.properties
           echo "keyAlias=${{ secrets.LMAXIM_KEY_ALIAS }}" >> android/key.properties
+
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
           java-version: "11"
           cache: gradle
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -75,7 +80,7 @@ jobs:
           path: release/**
 
   build_ios:
-    name: Build iOS
+    name: Build for IOS
     runs-on: macos-latest
     env:
       SHEME: Runner
@@ -104,5 +109,6 @@ jobs:
       - name: Generate C to Dart files
         run: dart run ffigen
 
-      - name: Build Flutter
+      - name: Start IOS Release Build
         run: flutter build ios --release --no-codesign
+        
